Corrected silly mistages in finetune prep

--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,6 @@ next-env.d.ts
 train/config.py
 
 # Twitter data archive
-train/data/tweets.js
 train/finetune.py
-train/__pycache__/config.cpython-311.pyc
-train/data/finetune_test.jsonl
-.gitignore
-train/data/finetune_train.jsonl
+train/data/*
+train/__pycache__
